// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResolverRule Construct(ResolverRule):  Snapshot Test 1`] = `
{
  "Resources": {
    "CustomKey1E6D0D07": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
    "TestResolverRule183FBE0C": {
      "Properties": {
        "DomainName": "test.com",
        "Name": "TestResolverRule",
        "ResolverEndpointId": "TestEndpoint",
        "RuleType": "FORWARD",
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestResolverRule",
          },
        ],
        "TargetIps": [
          {
            "Ip": "1.1.1.1",
          },
          {
            "Ip": "2.2.2.2",
          },
        ],
      },
      "Type": "AWS::Route53Resolver::ResolverRule",
    },
    "TestResolverRuleAssoc7E0DCDC2": {
      "Properties": {
        "ResolverRuleId": {
          "Fn::GetAtt": [
            "TestResolverRule183FBE0C",
            "ResolverRuleId",
          ],
        },
        "VPCId": "TestVpc",
      },
      "Type": "AWS::Route53Resolver::ResolverRuleAssociation",
    },
  },
}
`;

exports[`ResolverRule Construct(ResolverRule):  Snapshot Test 2`] = `
{
  "Resources": {
    "CustomKey1E6D0D07": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
    "TestResolverRule183FBE0C": {
      "Properties": {
        "DomainName": "test.com",
        "Name": "TestResolverRule",
        "RuleType": "SYSTEM",
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestResolverRule",
          },
        ],
        "TargetIps": [
          {
            "Ip": "1.1.1.1",
          },
          {
            "Ip": "2.2.2.2",
          },
        ],
      },
      "Type": "AWS::Route53Resolver::ResolverRule",
    },
    "TestResolverRuleAssoc7E0DCDC2": {
      "Properties": {
        "ResolverRuleId": {
          "Fn::GetAtt": [
            "TestResolverRule183FBE0C",
            "ResolverRuleId",
          ],
        },
        "VPCId": "TestVpc",
      },
      "Type": "AWS::Route53Resolver::ResolverRuleAssociation",
    },
  },
}
`;
